fixing spacing bug

--- a/source/stylesheets/layouts/_media-queries.scss
+++ b/source/stylesheets/layouts/_media-queries.scss
@@ -147,6 +147,9 @@
     a {
       font-size: 22px;
     }
+    h3 {
+      margin-top: 10px;
+    }
   }
 
   // LISTE
